--- a/static/login.css
+++ b/static/login.css
@@ -1,6 +1,5 @@
 #loginDiv{
-    margin-left : 30%;
-    margin-right: 30%;
+    margin: auto;
     padding-bottom: 20px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border: red;
@@ -24,17 +23,6 @@
     text-align: center;
 }
 
-#loginDiv button{
-    border-radius: 5px;
-    margin: 10px;
-    padding: 10px;
-    background-color: #be1d00;
-}
-
-#loginDiv button:hover{
-    background-color: #ff2a05;
-    color: white;
-}
 
 
 
