--- a/static/style.css
+++ b/static/style.css
@@ -1,19 +1,21 @@
 :root {
     --primary-color: #c8dc71;
-    --gradient-color: linear-gradient(180deg, #d2ff00 0%, #00d2ff 100%);
+    --gradient-color: linear-gradient(180deg, #8dac07 0%, #00d2ff 100%);
   }
   
   * {
-    box-sizing: border-box;
-    padding: 0;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
     margin: 0;
+    box-sizing: border-box;
+    /*user-select: none;*/
   }
   body {
+    color:white;
     background: #1c1f23;
     display: flex;
+    flex-direction: column;
     place-items: center;
     height: 100vh;
-    font-family: "Space Grotesk", sans-serif;
   }
   
   .container {
@@ -21,10 +23,11 @@
     margin: 0 auto;
   }
   
-  .btn-primary {
+  .btn-primary, button {
+    border-radius: 5px;
+    margin: 10px;
+    padding: 10px;
     place-items: center;
-    border-radius: 0.75em;
-    padding: 1.75rem 3rem;
     width: 80%;
     text-decoration: none;
     color: rgb(151, 151, 151);
