--- a/static/css/login.css
+++ b/static/css/login.css
@@ -2,12 +2,28 @@
     margin: auto;
     padding-bottom: 20px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    border: red;
     border-radius: 20px;
     color: white;
     background-color: #36393e;
     text-align: center;
 }
+
+#authentification{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 10px;
+    width: 50%;
+    margin: auto;
+    padding: 20px;
+    border: none;
+    border-radius: 10px;
+    background-color: #36393e;
+    color: white;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
 
 #loginDiv h1{
     padding: 20px;
