--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,7 +11,10 @@
   }
   body {
     color:white;
-    background: #1c1f23;
+    background: linear-gradient(180deg, #04fafd, 5%, #119dff, 50%, #030423);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    
     display: flex;
     flex-direction: column;
     place-items: center;
