notif and fixed thigns

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -84,3 +84,11 @@
     }
   }
   
+  .notification-dot {
+    width: 10px;
+    height: 10px;
+    background-color: red;
+    border-radius: 50%;
+    position: absolute;
+    right: 5px;
+}
