Online users have now a green dot their name + fixed date and chat container + contact list correctly updated when a message is receive

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -103,3 +103,13 @@
   right: -5px;
   visibility: visible;
 }
+
+.online-dot {
+  width: 10px;
+  height: 10px;
+  background-color: green;
+  border-radius: 50%;
+  position: absolute;
+  right: 20px;
+  display: none; /* Hidden by default */
+}
