--- a/static/css/post.css
+++ b/static/css/post.css
@@ -27,6 +27,7 @@
     padding: 20px;
     transition: transform 0.2s, box-shadow 0.2s;
     overflow: hidden;
+    margin: 10px;
 }
 
 .post:hover {
@@ -67,7 +68,7 @@
     border-radius: 5px;
     cursor: pointer;
     transition: background 0.2s;
-    margin-top: 10px;
+    margin: 10px;
 }
 
 .comments:hover {
