--- a/static/css/contacts.css
+++ b/static/css/contacts.css
@@ -8,8 +8,8 @@
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
 
     position: fixed;
-    top: 0;   /* Aligns it to the top of the page */
-    left: 0;  /* Aligns it to the left of the page */
+    top: 450px;   /* Aligns it to the top of the page */
+    left: 80px;  /* Aligns it to the left of the page */
     z-index: 10; 
 
 
