--- a/static/css/style.css
+++ b/static/css/style.css
@@ -113,3 +113,10 @@
   right: 20px;
   display: none; /* Hidden by default */
 }
+
+.typing-indicator {
+  font-style: italic;
+  font-size: 0.9em;
+  color: gray;
+  padding: 5px;
+}
