--- a/static/css/messages.css
+++ b/static/css/messages.css
@@ -100,3 +100,33 @@
 .send-button:hover {
     background-color: #4a94ff;
 }
+
+/* Typing animation */
+.dot {
+    opacity: 0;
+    animation: typingDot 1.1s infinite;
+    display: inline-block;
+}
+
+.dot:nth-child(2) {
+    animation-delay: 0.2s;
+}
+
+.dot:nth-child(3) {
+    animation-delay: 0.4s;
+}
+
+@keyframes typingDot {
+    0% {
+        opacity: 0;
+    }
+    40% {
+        opacity: 1;
+    }
+    80% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 0;
+    }
+}
